objects/Cross_Reference__c.object
<CustomObject>
    <fields>
        <fullName>Catalog_Page__c</fullName>
        <label>Catalog Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Competitor_Name__c</fullName>
        <label>Competitor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Part__c</fullName>
        <label>Competitor Part</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cross_Type__c</fullName>
        <label>Cross Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Energy_Record_id__c</fullName>
        <label>Energy Record id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Te_Part__c</fullName>
        <label>Te Part</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Cross Reference</label>
    <nameField>
        <label>Cross Reference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cross References</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>